# dependabot-demo

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  openhands-dependabot.yml  simulate-dependabot.yml
scripts/: reset_demo.sh  simulate_dependabot.sh  trigger_via_curl.sh
src/: __init__.py  main.py
src/api/: routes.py  schemas.py
src/models/: base.py  task.py  user.py
src/services/: task_service.py  user_service.py
src/utils/: helpers.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_schemas.py  test_services.py
